tests/paczka2/big_fuzzy/30920807.err
Error in line 9: muNQS10C S959 80,8
Error in line 17: 3PTIkIC7 S323 66,8
Error in line 15: muNQS10C S721 97,3
Error in line 18: eKCz1LSB2nn S959 11,4
Error in line 20: muNQS10C S959 68,6
Error in line 37: KHF5dachePd S721 4,0
Error in line 48: KHF5dachePd S323 323,9
Error in line 63: zi7EsI3D S323 78,8
Error in line 65: zi7EsI3D S959 92,5
Error in line 76: 3PTIkIC7 S959 5,1
Error in line 83: zi7EsI3D S959 212,4
Error in line 85: zi7EsI3D S721 78,7
Error in line 94: eKCz1LSB2nn S721 5,1
Error in line 95: eKCz1LSB2nn S228 64,3
Error in line 101: muNQS10C S228 66,4
Error in line 97: zi7EsI3D S228 86,2
Error in line 87: S959 S228 7,9
Error in line 125: 7Ut S959 30,0
Error in line 119: KHF5dachePd S323 5,8
Error in line 131: KHF5dachePd S228 51,5
Error in line 133: KHF5dachePd S323 9,0
Error in line 144: 3PTIkIC7 S959 18,3
Error in line 138: S959 S959 7,9
Error in line 147: S959 S228 18,6
Error in line 142: KHF5dachePd S721 56,5
Error in line 152: muNQS10C S721 32,5
Error in line 154: muNQS10C S959 43,4
Error in line 158: muNQS10C S959 28,41
Error in line 157: muNQS10C S228 97,4
Error in line 148: S959 S959 77,7
Error in line 164: eKCz1LSB2nn S721 54,8
Error in line 137: zi7EsI3D S959 65,0
Error in line 165: eKCz1LSB2nn S228 94,9
Error in line 174: 3PTIkIC7 S959 61,9
Error in line 176: zi7EsI3D S959 38,2
Error in line 183: S959 S721 136,6
Error in line 179: 7Ut S721 2,5
Error in line 196: 7Ut S959 25,1
Error in line 189: muNQS10C S959 61,5
Error in line 202: zi7EsI3D S721 80,0
Error in line 205: zi7EsI3D S959 88,4
Error in line 211: KHF5dachePd S959 99,8
Error in line 218: KHF5dachePd S721 41,1
Error in line 225: KHF5dachePd S959 -2,8
Error in line 235: muNQS10C S323 73,1
Error in line 223: KHF5dachePd S959 31,0
Error in line 236: muNQS10C S228 14,1
Error in line 234: eKCz1LSB2nn S959 78,7
